# zippy

./: .gitignore  MANIFEST.in  README.md  clean.py  init_venv.bat  make_bundle.bat  pyproject-uncommented.toml  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup_msi.py
adjacent/archive/: core.py
adjacent/dev_tools/: remove_words_less_than_8.py
adjacent/scratch/: do_logging.py  drag_and_drop_two_files.py  tkinter_by_chagpt.py  tkinter_play.py
adjacent/scratch/pop_up/: pop_up.py  pop_up2.py
installer/: install_folder_bundle.bat
makers/: build_msi.bat  make_bundle-onefile.bat
scratch/: call_winzip.py  echo_arg.py  pyproject.toml  python_classes.py  read_from_config.py  tkinter_by_chagpt_2.py
scratch/gui/: my_gui.py  radio_buttons.py  user_dialogue.py
src/: cfs_zippy.py  config.toml  zippy.py
src/$src-template/: example2.json
src/boom_zip/: __main__ copy.py  boom.py  lock copy.py  lock.py
src/zippy/: __init__.py  __main__.py  checks.py  config.toml  core.py  gui.py  path_management.py  settings temp copy.toml  settings.py  settings.toml  top-100000-common-passwords.txt  zip.py
test/: full_run.py
test/sandbox/: a file with spaces.txt  boom.exe - Shortcut.lnk  boom.exe(internal).lnk  boom.exe-oinefile - Shortcut.lnk
test/sandbox/a_folder/: a_text_file.txt
test/test_unbuilt/: from_cli.bat  test_settings_class.py
