[build-system] 
requires = [ "setuptools",] 
build-backend = "setuptools.build_meta" 

[project] 
name = "cfs_zippy" 
version = "1.0.3" 
dependencies = [ "importlib-resources; python_version<\"3.10\"",] 
authors=[
    {name="Alexander Oakley", email="alexander.oakley@cfs.com.au"},
]
description="Quickly zip and encrypt files and/or folders"