[build-system] 
requires = [ "setuptools",] 
build-backend = "setuptools.build_meta" 

[project] 
name = "zippy" 
version = "1.0.8" 
dependencies = [ "importlib-resources; python_version<\"3.10\"",] 
authors=[
    {name="Alexander Oakley", email="alexander.oakley@cfs.com.au"},
]
description="Quickly zip and encrypt files and/or folders"