[build-system] 
requires = [ "setuptools",] 
build-backend = "setuptools.build_meta" 

[project] 
name = "zippy" 
version = "1.2.0" 
dependencies = [ "importlib-resources; python_version<\"3.10\"", "pyperclip"] 
authors=[
    {name="Alexander Oakley"},
]
description="Quickly zip and encrypt files and/or folders"